# claude-context-lens

./: .gitignore  4-7-full-context.md  4-7-system-prompt.md  4-7-vs-4-8-comparison.md  4-8-full-context.md  4-8-system-prompt.md  HANDOFF.md  README.md  SESSION_DIFF_READING_GUIDE.md  SYSTEM_PROMPT_SIZE_CLAUDE_VS_CODEX.md  pyproject.toml
claude_lens/: breakdown.py  cli.py  codex_breakdown.py  codex_ingest.py  contract.py  ingest.py  launcher.py  linking.py  turns.py
docs/superpowers/plans/: 2026-07-04-capture-service-and-data-contract.md  2026-07-06-macos-app.md
docs/superpowers/specs/: 2026-07-04-capture-service-and-data-contract-design.md  2026-07-06-codex-support-design.md  2026-07-06-macos-app-design.md
macos-app/: Package.swift  README.md
macos-app/Sources/ContextLensApp/: AppIcon.swift  AppModel.swift  CompositionView.swift  ContextLensApp.swift  DiffView.swift  OutlineView.swift  RootView.swift  SessionListView.swift
macos-app/Sources/ContextLensCore/: Breakdown.swift  DiffEngine.swift  JSONValue.swift  Session.swift  SessionStore.swift
macos-app/Tests/ContextLensCoreTests/: BreakdownDecodeTests.swift  DiffEngineTests.swift  (+3 more)
macos-app/scripts/: gen-codex-fixture.py  make-app.sh  render-icon.swift
scripts/: analyze_session_diffs.py  analyze_session_requests.py  extract_context_window.py  run-claude-otel.sh
tests/: test_analyze_session_diffs.py  test_analyze_session_requests.py  test_breakdown.py  test_cli.py  test_codex_ingest.py  test_contract.py  test_extract_context_window.py  test_ingest.py  test_launcher.py  test_linking.py  test_turns.py
(+4 files in other folders)
